# connector-ftx

./: Cargo.toml  README.md
examples/: ws_example.rs
src/: common.rs  ftx_auth_settings.rs  lib.rs
src/ws/: error.rs  event_handler.rs  ftx_websocket.rs  ftx_ws_client.rs  ftx_ws_settings.rs  mod.rs  models.rs
src/ws_client/: ws_client.rs
