[package]
name = "connector-ftx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.19", features = ["serde"] }
futures = { version = "0.3", optional = true }
http = "0.2"
rust_decimal = "^1.13.0"
rust_decimal_macros = "^1.14.1"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
serde_with = { version = "2.0.1", features = ["chrono"] }
tokio = { version = "1.21.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.17.2", features = [
    "native-tls",
], optional = true }
hmac-sha256 = "1.1.4"
thiserror = "1"
crc32fast = "^1.2.1"
hex = "^0.4.3"
async-trait = "*"

[features]
default = ["ws"]
ws = ["tokio-tungstenite", "tokio", "futures"]