[package]
name = "connector-ftx"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-web-socket-client = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-web-socket-client" }

chrono = { version = "^0.4.19", features = ["serde"] }
http = "0.2"
rust_decimal = "^1.13.0"
rust_decimal_macros = "^1.14.1"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
serde_with = { version = "2.0.1", features = ["chrono"] }
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
hmac-sha256 = "1.1.4"
thiserror = "1"
crc32fast = "^1.2.1"
hex = "^0.4.3"
async-trait = "*"
futures = "*"
future-utils = "*"
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
